Implement FindResponse wrapper for API responses and refactor services to use it